# word2vec-model-from-scratch-using-PyTorch

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
